delete unnecessary video file/edit theme description

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************************************************
 Theme Name: WerthTheWait
 Theme URI: http://www.eng.ufl.edu
-Description: This site was built using the Bones Development Theme.
+Description: Theme for #WerthTheWait event countdown landing page.
 Author: University of Florida College of Engineering
 Author URI: https://www.eng.ufl.edu
 Version: 1.7
@@ -12,6 +12,7 @@ License URI: https://tldrlegal.com/license/mit-license
 
 Styles are here: /library/css/style.css
 Compiled from here: /library/scss/style.scss
+This theme was developed using the Bones development theme http://themble.com/bones/
 
 ******************************************************************/
 
